--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=new.html">
+<meta http-equiv="refresh" content="0; url=html/new.html">
 <title>Redirecting...</title>
 </head>
 <body>
-If you are not redirected automatically, <a href="new.html">click here</a>.
+If you are not redirected automatically, <a href="html/new.html">click here</a>.
 </body>
 </html>
