--- a/html/qa.html
+++ b/html/qa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Q&A - Người dùng (Anime UI)</title>
+<title>Q&A - User</title>
 
 <!-- ICONS: inline SVG symbols -->
 <svg style="display:none">
@@ -364,3 +364,4 @@ render();
 
 </body>
 </html>
+
