--- a/html/signup.html
+++ b/html/signup.html
@@ -61,9 +61,9 @@
 <div class="card" role="main" aria-labelledby="t">
   <h1 id="t">Sign Up</h1>
 
-  <input id="email" class="input" type="email" placeholder="Nhập email..." autocomplete="email">
+  <input id="email" class="input" type="email" placeholder="type email..." autocomplete="email">
 
-  <button id="btnEmail" class="btn-main" onclick="onEmail()">Đăng nhập bằng Email</button>
+  <button id="btnEmail" class="btn-main" onclick="onEmail()">sign up by Email</button>
 
   <button id="btnFB" class="btn" onclick="onSocial('facebook')">
     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" alt="facebook icon"> Facebook
@@ -73,7 +73,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Icon_of_Zalo.svg/480px-Icon_of_Zalo.svg.png" alt="zalo icon"> Zalo
   </button>
 
-  <div class="note">Bạn sẽ được chuyển qua tạo mật khẩu và điền thông tin sau khi đăng nhập.</div>
+  <div class="note">You will be redirected to create a password and fill in your information after logging in</div>
 </div>
 
 <script>
@@ -120,3 +120,4 @@ document.getElementById('email').addEventListener('keydown', function(e){
 
 </body>
 </html>
+
